--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ author:
   dribbble         :
   flickr           :
   facebook         :
-  medium           :
+  f-link-testing   : "https://academicpages.github.io"
   github           : 
   google_plus      :
   keybase          :
