--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ author:
   github           : 
   google_plus      :
   keybase          :
-  instagram        : "levoleurdecorps"
+  instagram        : "tktai.design"
   lastfm           :
   linkedin         :
   orcid            : "https://orcid.org/0000-0003-1445-775X"
